--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,11 +2,11 @@
     background-color: rgb(238, 238, 238);
 }
 
-.h2{
+.h2{font-family: 'Bree Serif', serif;
     /* background-color: violet; */
     /* border: 5px solid salmon; */
     text-align: center;
-    font-family: 'Bree Serif', serif;
+    
 }
 html{
     scroll-behavior: smooth;
