--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,11 +2,11 @@
     background-color: rgb(238, 238, 238);
 }
 
-.sone{font-family: 'Bree Serif', serif;
+.h2{
     /* background-color: violet; */
     /* border: 5px solid salmon; */
     text-align: center;
-    
+    font-family: 'Bree Serif', serif;
 }
 html{
     scroll-behavior: smooth;
@@ -40,7 +40,7 @@ html{
 
 #navbar ul li{ 
     list-style: none;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 
 #navbar ul li a{
@@ -79,7 +79,7 @@ html{
     border: 5px solid white ;
    display: none;
    /* padding: 10px 5px; */
-   margin: 35px 2px;
+ margin: 35px 5px;
    width: 100%;
    height: 80%;
 }
